DataTransfer: Remove text/plain payload when copying an image on Mac

Helps fix errors in apps which prefer text/plain content while pasting over img,
even though it is less spec-conformant to provide fewer types than possible. As
noted in the crbug, these apps (ex. Messenger) generally prefer text/plain
content due to compatibility issues with Microsoft Word.

This does also make us more consistent with other platforms (ex. Windows/Linux),
where we don't provide the text/plain field.

Also moved a browser test to a layout test for future ease of testing. The
browser test wasn't able to generate text/plain to reproduce the bug, due to
images only previously producing text/plain output on images with alt text, and
execCommand only operating on iframe DOM objects (not image DOM objects)

Bug: 838808
Change-Id: I28b2d8d223c2448f47e887323afccae73d6bcf44
Reviewed-on: https://chromium-review.googlesource.com/c/1319032
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Joshua Bell <jsbell@chromium.org>
Commit-Queue: Darwin Huang <huangdarwin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610250}
Former-commit-id: fe5e25087068b481d45d88f5054039a74f60a3e7