third_party/blink/renderer/core/clipboard/system_clipboard.cc
@@ -182,8 +182,14 @@ void SystemClipboard::WriteImage(Image* image,
   clipboard_->WriteImage(mojom::ClipboardBuffer::kStandard, bitmap);
 
   if (url.IsValid() && !url.IsEmpty()) {
+#if !defined(OS_MACOSX)
+    // See http://crbug.com/838808: Not writing text/plain on Mac for
+    // consistency between platforms, and to help fix errors in applications
+    // which prefer text/plain content over image content for compatibility with
+    // Microsoft Word.
     clipboard_->WriteBookmark(mojom::ClipboardBuffer::kStandard,
                               url.GetString(), NonNullString(title));
+#endif
 
     // When writing the image, we also write the image markup so that pasting
     // into rich text editors, such as Gmail, reveals the image. We also don't
